# AI_Coding_Agent

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  parser.py  prompts.py
app/api/: routes.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/llm/: base.py  factory.py  providers.py
app/models/: requests.py  responses.py  state.py
app/services/: github_service.py  repository_service.py
app/tools/: repository_tools.py
docs/: architecture.md
evaluation/: benchmark.py  results.json
examples/: sample_output.json  sample_request.json
mcp_server/: server.py
tests/: test_api.py  test_parser.py  test_repository_service.py  test_security.py
workspace/sample_repo/: README.md  calculator.py
